--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -3,12 +3,12 @@
   "name": "Banned Bluebook",
   "description": "This extension supplements Yale's official bluebooking app with the functionality to sort courses by rating and by workload.",
   "version": "0.1",
-  "permissions": [ "https://ybb.yale.edu/" ],
+  "permissions": [ "https://acsprod.mccombs.utexas.edu/classlist/" ],
   "permissions": [
     "storage"
    ],
   "content_scripts": [{
-    "matches": ["https://ybb.yale.edu/*"],
+    "matches": ["https://acsprod.mccombs.utexas.edu/classlist/*"],
     "js": ["jquery.js", "app.js"],
     "run_at": "document_idle",
     "css": ["style.css"]
